fixed little glitch where the last row would stretch the icons

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -240,7 +240,6 @@
 	.godImg {
 		display: block;
 		width: 100%;
-		height: 100%;
 		z-index: -1;
 	}
 
